--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 
   <button id="btnAdd" class="fab" aria-label="Add card">＋</button>
 
-  <footer class="shell footnote">
+  <footer class="shell footrow">
+    <label class="toggle"><input type="checkbox" id="detailsToggle"> Card details</label>
     <small>Works offline · Data stays on this device</small>
   </footer>
 
